fix ux on mobile

--- a/css/text.css
+++ b/css/text.css
@@ -11,8 +11,8 @@
   font-weight: bold;
 }
 
-h3 {
-  font-size: 1.9em;
+.t_1 {
+  font-size: 1.3em;
   font-weight: bold;
 }
 
